<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_simple_check_boxes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jiahaoliuliu.simpleespressotest.SimpleCheckBoxesActivity"
    android:orientation="vertical"
    >

    <!-- Check box 1 -->
    <CheckBox
        android:id="@+id/check_box_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_box_1"
        />

    <!-- Check box 2 -->
    <CheckBox
        android:id="@+id/check_box_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_box_2"
        />

    <!-- Check box 3 -->
    <CheckBox
        android:id="@+id/check_box_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_box_3"
        />

    <!-- Check box 4 -->
    <CheckBox
        android:id="@+id/check_box_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_box_4"
        />

    <!-- Check box 5 -->
    <CheckBox
        android:id="@+id/check_box_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_box_5"
        />

    <!-- Check box 6 -->
    <CheckBox
        android:id="@+id/check_box_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_box_6"
        />

    <!-- Check box 7 -->
    <CheckBox
        android:id="@+id/check_box_7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_box_7"
        />
</LinearLayout>
