<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_simple_radio_buttons"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jiahaoliuliu.simpleespressotest.SimpleRadioButtonsActivity"
    android:orientation="vertical"
    >

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- Radio button 1 -->
        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_1"
            />

        <!-- Radio button 2 -->
        <RadioButton
            android:id="@+id/radio_button_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_2"
            />

        <!-- Radio button 3 -->
        <RadioButton
            android:id="@+id/radio_button_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_3"
            />

        <!-- Radio button 4 -->
        <RadioButton
            android:id="@+id/radio_button_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_4"
            />

        <!-- Radio button 5 -->
        <RadioButton
            android:id="@+id/radio_button_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_5"
            />

        <!-- Radio button 6 -->
        <RadioButton
            android:id="@+id/radio_button_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_6"
            />

        <!-- Radio button 7 -->
        <RadioButton
            android:id="@+id/radio_button_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_7"
            />
    </RadioGroup>
</LinearLayout>
